--- a/app/src/main/res/layout/activity_rellenar_formulario.xml
+++ b/app/src/main/res/layout/activity_rellenar_formulario.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.design.widget.CoordinatorLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".RellenarFormulario">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_formulario"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.pedro.proyecto_pgl_2018.RellenarFormulario">
+    android:orientation="vertical">
 
     <ScrollView
 
@@ -18,11 +41,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="59dp">
 
                     <EditText
                         android:id="@+id/editTextNombre"
@@ -129,4 +151,5 @@
 
    </LinearLayout>
   </ScrollView>
-</LinearLayout>
+ </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
