--- a/Proyecto_PGL_2018/app/src/main/res/layout/activity_rellenar_formulario.xml
+++ b/Proyecto_PGL_2018/app/src/main/res/layout/activity_rellenar_formulario.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.pedro.proyecto_pgl_2018.RellenarFormulario">
+    tools:context="com.example.pedro.proyecto_pgl_2018.RellenarFormularioInsertar">
 
 
     <android.support.design.widget.TextInputLayout
