--- a/app/src/main/res/layout/content_my_request.xml
+++ b/app/src/main/res/layout/content_my_request.xml
@@ -28,6 +28,7 @@
              have to call it "@android:id/list" so ListActivity will
              find it -->
         <ListView android:id="@android:id/list"
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawSelectorOnTop="false"/>
