--- a/app/src/main/res/layout/nav_header_menu_principal_usuario.xml
+++ b/app/src/main/res/layout/nav_header_menu_principal_usuario.xml
@@ -16,21 +16,20 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="--"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/logo2" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="--"
+        android:text="Pedro Alberto Cabello Munguia"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="--" />
+        android:text="pecabellom95@gmail.com" />
 
 </LinearLayout>
