--- a/app/src/main/res/layout/activity_menu_segundario_usuario.xml
+++ b/app/src/main/res/layout/activity_menu_segundario_usuario.xml
@@ -33,6 +33,8 @@
            android:layout_height="wrap_content"
            android:id="@+id/tabs"
            app:tabTextColor="@android:color/holo_orange_dark"
+           app:tabMode="fixed"
+
            />
 
     </android.support.design.widget.AppBarLayout>
