--- a/app/src/main/res/menu/activity_menu_principal_usuario_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_principal_usuario_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/menu_new_galery" />
 
     </group>
 
