--- a/app/src/main/res/layout/activity_login_principal.xml
+++ b/app/src/main/res/layout/activity_login_principal.xml
@@ -42,7 +42,7 @@
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="190dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_user"
         android:ems="10"
@@ -72,7 +72,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="145dp"
+        android:layout_marginBottom="130dp"
 
         app:cardBackgroundColor="#E57373"
         app:cardCornerRadius="25dp"
@@ -97,20 +97,37 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+    <android.support.v7.widget.CardView
+        android:id="@+id/Boton_Registrar"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="144dp"
-        android:layout_marginRight="144dp"
-        android:layout_marginBottom="91dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
 
-        android:text="@string/Register" />
+        app:cardBackgroundColor="#E57373"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login_registrar"
+                android:textColor="#fff"
+                android:layout_centerInParent="true"
+                android:textSize="18dp"
+
+                />
+
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 
 
 </RelativeLayout>
